1. Collection API Улучшения[#151512]